# crewaiElton

./: README.md  pyproject.toml  report.md  requirements.txt  task_analysis_output.json
output/: task_instructions.md
src/task_manager/: crew.py  main.py
src/task_manager/agents/: task_consultant.py
src/task_manager/config/: agents.yaml  tasks.yaml
src/task_manager/tasks/: analyze_task.py
src/task_manager/utils/: setup.py  translate.py
tests/: test_main.py
